# protostruct

./: .cmake-format.py  .gitignore  BUILD  CMakeLists.txt  README.rst  WORKSPACE  apt-requirements-bionic.txt  pip-requirements.txt  pylintrc
argue/: BUILD  CMakeLists.txt  README.rst  action.cc  action.h  action.tcc  argue-config.cmake  argue.h  can_complete.cc  exception.cc  exception.h  glog.cc  glog.h  json_dump.cc  json_dump.h  keywords.h  keywords.tcc  kwargs.cc  kwargs.h  kwargs.tcc  libargue.pc  parse.cc  parse.h  parse.tcc  parser.cc  parser.h  parser.tcc  storage_model.h  storage_model.tcc  util.h
argue/bash_completion.d/: argue-argcomplete
argue/doc/: .readthedocs.yml  CMakeLists.txt  changelog.rst  conf.py  features.rst  index.rst  release_notes.rst  type_elision.rst  usage.rst
argue/examples/: BUILD  CMakeLists.txt  argparse_example.cc  simple_example.cc  subparser_example.cc
argue/test/: BUILD  CMakeLists.txt  arg_test.cc  assert_test.cc  execution_tests.py  keyword_test.cc  parse_test.cc  util_test.cc
build_tooling/: lint-excludes.txt
build_tooling/bazel/: WORKSPACE.bionic  WORKSPACE.focal  WORKSPACE.impish  WORKSPACE.xenial  common.bzl  system-bionic.bzl  system-focal.bzl  system-impish.bzl  system-xenial.bzl  tangent.bzl
build_tooling/cmake/: tangent.cmake
build_tooling/cmake/tangent/: codestyle.cmake  debian.cmake  environment.cmake  pkgconfig.cmake  python.cmake  wrappers.cmake
doc/: conf.py
tangent/: BUILD
tangent/protostruct/: .gitignore  BUILD  CMakeLists.txt  README.rst  booltest.h  cereal_utils.h  descriptor_extensions.proto  devtest.cc  diff_test.py  dummy-main.cc  gen.py  libpbwire.pc  make_pyzip.py  make_release.py  pbwire-config.cmake  pbwire-test.cc  pbwire.cc  pbwire.h  protostruct-compile.cc  protostruct-config.cmake  protostruct-main.cc  protostruct.cc  protostruct.h  simple-cpp-test.cc  template_context.py  template_util.py  tools.bzl
tangent/protostruct/doc/: CMakeLists.txt  changelog.rst  conf.py  design.rst  index.rst
tangent/protostruct/sync/: test_messages.proto
tangent/protostruct/templates/: XXX-recon.h.jinja2  XXX-simple.cc.jinja2  XXX-simple.h.jinja2  XXX.cereal.h.jinja2  XXX.pb2c.cc.jinja2  XXX.pb2c.h.jinja2  XXX.pbwire.c.jinja2  XXX.pbwire.h.jinja2  XXX.proto.jinja2
tangent/protostruct/test/: test_messages-recon.h  test_messages-simple.cc  test_messages-simple.h  test_messages.c  test_messages.cereal.h  test_messages.h  test_messages.pb.cc  test_messages.pb.h  test_messages.pb2c.cc  test_messages.pb2c.h  test_messages.pbwire.c  test_messages.pbwire.h  test_messages.proto
tangent/tjson/: BUILD  CMakeLists.txt  cpputil.cc  cpputil.h  emit.c  emit.h  libtjson.pc  main.cc  ostream.h  parse.c  parse.h  tjson-config.cmake  tjson.c  tjson.h
tangent/tjson/test/: BUILD  CMakeLists.txt  lexer_test.cc  ostream_test.cc  parser_test.cc  string_test.cc
tangent/tooling/: gtkdoc_helper.py  sync_sparse.py
tangent/tooling/sparse-exports/protostruct/: pip-requirements.txt  sparse-checkout
tangent/util/: BUILD  array_stack.h  array_stack_test.cc  container_of.h  exception.cc  exception.h  exception_test.cc  fallthrough.h  fixed_string_stream.h  fixed_string_stream_test.cc  hash.h  hash_test.cc  nullstream.h  set_operations.hpp  stack_trace.cc  stack_trace.h  stringutil.cc  stringutil.h  type_string.h  type_string_test.cc  util.h
tangent/util/doc/: changelog.rst  release_notes.rst
